--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 	<div class="background-blue">
 	<header class="container-fluid">
-			<div class="container mx-auto text-center mb-5 title">
-				<h1 class="text-info">A Meme Generator for the Generations</h1>
-				<h2>Create your own unique memes with this easy to use generator</h2>
+		<div class="container mx-auto text-center mb-5 title">
+				<h1 class="text-info">New Years Greetings from Sunil & Team</h1>
+				
 		</div>
 		<div class="steps">
 			<p></p>
@@ -25,28 +25,15 @@
 
 	<section class="container"> 
 		<form id="meme-form">
-			<!-- Image section of form -->
-			<div class="group-form row mb-5">
-				<label for="link-to-pic" class="col-md-2 col-form-label">Image URL Here:</label>
-			<div class="col-md-10">
-      			<input type="url" class="form-control" id="uploaded-img" placeholder="Your URL Goes Here" required>
-   			 </div>
-
-			 </div>
+			
 			 <!-- text-top section of form -->
 		<div class="group-form row mb-5">
 				<label for="text-on-top" class="col-md-2 col-form-label">Text on top:</label>
 			<div class="col-md-10">
-      			<input type="text" class="form-control" id="text-top" placeholder="Your Top Text Goes Here (Optional)">
+      			<input type="text" class="form-control" id="text-top" placeholder="Add your name">
     		</div>
 		</div>
-		<!-- text-bottom section of form -->
-		<div class="group-form row mb-5">
-				<label for="text-on-bottom" class="col-md-2 col-form-label">Text on Bottom:</label>
-			<div class="col-md-10">
-      			<input type="text" class="form-control" id="text-bottom" placeholder="Your Bottom Text Goes Here (Optional)">
-    		</div>
-		</div>
+		
 		<div class="group-form row mb-5">
 				<label class="col-md-2 col-form-label">&nbsp;</label>
 			<div class="col-md-2">
@@ -66,13 +53,7 @@
 	
 
 </section>
-	<footer>
-		<div class="container-fluid footer">
-			<p>Keep on meme-ing on. Never give up on the meme times</p>
-			
-		</div>
-		
-	</footer>
+	
 
 	<!-- JS SCRIPTS -->
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
