--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<ul class="gallery">
 	</ul>
 	
-	<img src="/happynewyear.jpg">
+	<img src="/happynewyear.jpg" alt="adding image">
 	
 
 </section>
