--- a/index.html
+++ b/index.html
@@ -1,80 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="style.css">
-
-	<title>Meme Generator</title>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
-</head>
-<body>
-	<div class="background-blue">
-	<header class="container-fluid">
-			<div class="container mx-auto text-center mb-5 title">
-				<h1 class="text-info">A Meme Generator for the Generations</h1>
-				<h2>Create your own unique memes with this easy to use generator</h2>
-		</div>
-		<div class="steps">
-			<p></p>
-			
-		</div>
-
-	</header>
-
-	<section class="container"> 
-		<form id="meme-form">
-			<!-- Image section of form -->
-			<div class="group-form row mb-5">
-				<label for="link-to-pic" class="col-md-2 col-form-label">Image URL Here:</label>
-			<div class="col-md-10">
-      			<input type="url" class="form-control" id="uploaded-img" placeholder="Your URL Goes Here" required>
-   			 </div>
-
-			 </div>
-			 <!-- text-top section of form -->
-		<div class="group-form row mb-5">
-				<label for="text-on-top" class="col-md-2 col-form-label">Text on top:</label>
-			<div class="col-md-10">
-      			<input type="text" class="form-control" id="text-top" placeholder="Your Top Text Goes Here (Optional)">
-    		</div>
-		</div>
-		<!-- text-bottom section of form -->
-		<div class="group-form row mb-5">
-				<label for="text-on-bottom" class="col-md-2 col-form-label">Text on Bottom:</label>
-			<div class="col-md-10">
-      			<input type="text" class="form-control" id="text-bottom" placeholder="Your Bottom Text Goes Here (Optional)">
-    		</div>
-		</div>
-		<div class="group-form row mb-5">
-				<label class="col-md-2 col-form-label">&nbsp;</label>
-			<div class="col-md-2">
-      			<input type="submit" class="btn btn-success" value="Generate it!">
-    		</div>
-		</div>
-
-		</form>
-		<div class="line"></div>
-	</section>
+<h1>Overlay text on canvas image and save as base64</h1>
+<div class="page-wrap">
+  <div class="controls">
+    <input class="controls__input" type="file" id="imageLoader" name="imageLoader"/>
+    <label class="controls__label" for="name">First, choose an image.</label>
+    
+    <input class="controls__input" id="name" type="text" value=""/>
+    <label class="controls__label" for="name">Overlay Text</label>
+  </div>
+  <div id="canvas-wrap">
+     <canvas style="display:block" id="imageCanvas" width=400px height=400px>
+        <canvas id="canvasID"></canvas>
+    </canvas> 
+  </div>
+  
 </div>
-
-<section class="meme-gallery">
-
-	<ul class="gallery">
-	</ul>
-	
-	<img src="../happynewyear.jpg" alt="adding image">
-	
-
-</section>
-	
-
-	<!-- JS SCRIPTS -->
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	<script src="script.js"></script>
-<!-- <script scr="script.js" type="text/javascript"></script> -->
-</body>
-</html>
