--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<head>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+</head>
+<body>
 <h1>Overlay text on canvas image and save as base64</h1>
 <div class="page-wrap">
   <div class="controls">
@@ -14,3 +20,4 @@
   </div>
   
 </div>
+</body>
